# itg-buddy

./: .env  .env.example  README.md  hello.py  pyproject.toml  server.py
itg_buddy/: bot.py  server.py
itg_buddy/extensions/: example.py  itg_cli.py
itg_buddy/extensions/itg_cli/: __init__.py  config.py  embeds.py  itg_cli.py  overwrite.py  utils.py  wrappers.py
