[project]
name = "itg-buddy"
version = "0.1.0"
description = "A discord bot for Dance Games at Berkeley"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "itg-cli>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
 itg-buddy = "itg_buddy.server:main"

[tool.uv]
package = true
